--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,12 @@ timezone: Europe/Berlin
 
 # Collections
 collections:
-  teaching:
-    output: true
-    permalink: /:collection/:path/
-  portfolio:
+  posts:
     output: true
     permalink: /:collection/:path/
   talks:
     output: true
     permalink: /:collection/:path/
-
 
 # Defaults
 defaults:
@@ -50,15 +46,6 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # _teaching
-  - scope:
-      path: ""
-      type: teaching
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comments: true
   # _talks
   - scope:
       path: ""
