--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@ future: true
 twitter:
   username: "stevenklar"
 
-author:
-  name: "Steven Klar"
-  avatar: "https://pbs.twimg.com/profile_images/1086708630689406976/9KraBDnv_400x400.jpg"
-  location: "Potsdam, Germany"
-  github: "stevenklar"
+author: "Steven Klar"
+#  name: "Steven Klar"
+#  avatar: "https://pbs.twimg.com/profile_images/1086708630689406976/9KraBDnv_400x400.jpg"
+#  location: "Potsdam, Germany"
+#  github: "stevenklar"
 
 encoding: utf-8
 
